--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,26 @@
-TELEGRAM_BOT_TOKEN=your_bot_token_here
-DATABASE_URL=postgresql://user:password@localhost:5432/lavka26_bot
-SUPABASE_URL=your_supabase_url_here
-SUPABASE_KEY=your_supabase_key_here
-PAYMENT_PROVIDER_TOKEN=your_payment_token_here
-ADMIN_ID=your_admin_id_here
-CHANNEL_ID=your_channel_id_here
+# Переменные окружения Lavka26
+
+# Telegram Bot
+TELEGRAM_BOT_TOKEN=ваш_токен_бота_здесь
+TELEGRAM_WEBHOOK_URL=https://your-app.onrender.com/bot/webhook
+
+# База данных Supabase
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=ваш_supabase_anon_key_здесь
+SUPABASE_SERVICE_KEY=ваш_supabase_service_key_здесь
+
+# Backend
+PORT=3001
+NODE_ENV=production
+JWT_SECRET=ваш_jwt_секрет_здесь
+CORS_ORIGIN=https://your-miniapp.vercel.app
+
+# Загрузка файлов
+SUPABASE_STORAGE_BUCKET=ad-images
+MAX_FILE_SIZE=5242880
+
+# Платежи
+TELEGRAM_PAYMENT_PROVIDER_TOKEN=ваш_токен_платежного_провайдера_здесь
+
+# Администратор
+ADMIN_TELEGRAM_ID=ваш_admin_telegram_id_здесь
