справлен бот для Production развертывания

--- a/backend/.env
+++ b/backend/.env
@@ -1,13 +1,13 @@
 NODE_ENV=development
 PORT=3001
-JWT_SECRET=your_jwt_secret_key_here
-CORS_ORIGIN=http://localhost:3000
-SUPABASE_URL=your_supabase_url_here
-SUPABASE_ANON_KEY=your_supabase_anon_key_here
-SUPABASE_SERVICE_KEY=your_supabase_service_key_here
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+JWT_SECRET=testsecret123
+CORS_ORIGIN=http://localhost:3003
+SUPABASE_URL=https://test.supabase.co
+SUPABASE_ANON_KEY=test
+SUPABASE_SERVICE_KEY=test
+TELEGRAM_BOT_TOKEN=8500920411:AAH_lBSuXMpkDLDMs6IRpLhrTe0G9JTaKmg
 TELEGRAM_WEBHOOK_URL=http://localhost:3001/bot/webhook
-TELEGRAM_PAYMENT_PROVIDER_TOKEN=your_payment_token_here
-ADMIN_TELEGRAM_ID=your_admin_telegram_id_here
+TELEGRAM_PAYMENT_PROVIDER_TOKEN=test
+ADMIN_TELEGRAM_ID=123456789
 SUPABASE_STORAGE_BUCKET=ad-images
 MAX_FILE_SIZE=5242880
