--- a/bot/.env
+++ b/bot/.env
@@ -1,4 +1,5 @@
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+TELEGRAM_BOT_TOKEN=8500920411:AAH_lBSuXMpkDLDMs6IRpLhrTe0G9JTaKmg
 TELEGRAM_WEBHOOK_URL=http://localhost:3001/bot/webhook
-SUPABASE_URL=your_supabase_url_here
-SUPABASE_SERVICE_KEY=your_supabase_service_key_here
+SUPABASE_URL=https://test.supabase.co
+SUPABASE_SERVICE_KEY=test
+PORT=3001
