птимизация render.yaml для бесплатного плана

--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 services:
-  # Backend API
+  # Backend API (оптимизирован для бесплатного плана)
   - type: web
     name: lavka26-backend
     env: node
@@ -7,6 +7,13 @@ services:
     rootDir: ./backend
     buildCommand: npm install
     startCommand: npm start
+    healthCheckPath: /health
+    
+    # Оптимизация для бесплатного плана
+    healthCheckGracePeriod: 30
+    healthCheckInterval: 30
+    autoDeploy: true
+    
     envVars:
       - key: NODE_ENV
         value: production
@@ -34,10 +41,8 @@ services:
         value: ad-images
       - key: MAX_FILE_SIZE
         value: 5242880
-    healthCheckPath: /health
-    autoDeploy: true
 
-  # Mini App (Frontend)
+  # Mini App (статический, минимальное потребление)
   - type: web
     name: lavka26-miniapp
     env: static
@@ -45,16 +50,22 @@ services:
     rootDir: ./miniapp
     buildCommand: npm run build
     staticPublishPath: ./dist
+    
+    # Оптимизация для статического сайта
+    healthCheckGracePeriod: 60
+    healthCheckInterval: 60
+    autoDeploy: true
+    
     envVars:
       - key: VITE_API_URL
         value: https://lavka26-backend.onrender.com
+        
     routes:
       - type: rewrite
         source: /.*
         destination: /index.html
-    autoDeploy: true
 
-  # Telegram Bot
+  # Telegram Bot (worker, минимальное потребление)
   - type: worker
     name: lavka26-bot
     env: node
@@ -62,6 +73,11 @@ services:
     rootDir: ./bot
     buildCommand: npm install
     startCommand: npm start
+    
+    # Worker оптимизация
+    healthCheckGracePeriod: 60
+    autoDeploy: true
+    
     envVars:
       - key: TELEGRAM_BOT_TOKEN
         sync: false
@@ -75,4 +91,3 @@ services:
         value: production
       - key: PORT
         value: 3001
-    autoDeploy: true
