--- a/bot/package.json
+++ b/bot/package.json
@@ -6,18 +6,17 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "webhook": "node -e \"require('./index.js').setWebhook()\"",
-    "unwebhook": "node -e \"require('./index.js').deleteWebhook()\""
+    "test": "jest"
   },
   "dependencies": {
     "node-telegram-bot-api": "^0.64.0",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "body-parser": "^1.20.2",
-    "@supabase/supabase-js": "^2.38.4"
+    "@supabase/supabase-js": "^2.38.4",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "jest": "^29.7.0"
   },
   "engines": {
     "node": ">=18.0.0"
