ТЫ Т: Vercel + Render + Supabase - полный функционал

--- a/render.yaml
+++ b/render.yaml
@@ -16,5 +16,9 @@ services:
         value: https://lavka26-bot.onrender.com
       - key: VERCEL_API_URL
         value: https://lavka26.vercel.app/api
+      - key: SUPABASE_URL
+        sync: false
+      - key: SUPABASE_SERVICE_KEY
+        sync: false
       - key: NODE_ENV
         value: production
