--- a/miniapp/package.json
+++ b/miniapp/package.json
@@ -25,7 +25,8 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-image-gallery": "^1.3.0",
     "date-fns": "^2.30.0",
-    "react-helmet-async": "^2.0.4"
+    "react-helmet-async": "^2.0.4",
+    "@supabase/supabase-js": "^2.38.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
