--- a/render.yaml
+++ b/render.yaml
@@ -16,17 +16,18 @@ services:
 
   - type: web
     name: lavka26-frontend
-    env: static
+    env: node
     plan: free
     rootDir: ./frontend
-    buildCommand: "echo 'Static files ready'"
-    staticPublishPath: ./
+    buildCommand: npm install
+    startCommand: npm start
     healthCheckPath: /
     healthCheckGracePeriod: 30
-    headers:
-      - path: /*
-        name: Cache-Control
-        value: no-cache, no-store, must-revalidate
+    envVars:
+      - key: PORT
+        value: 3000
+      - key: NODE_ENV
+        value: production
 
   - type: web
     name: lavka26-bot
