--- a/backend/package.json
+++ b/backend/package.json
@@ -1,1 +1,1 @@
-{"name":"lavka26-backend","version":"1.0.0","description":"Lavka26 Backend API","main":"server.js","scripts":{"start":"node server.js"},"dependencies":{"express":"^4.18.2","sqlite3":"^5.1.6","cors":"^2.8.5","dotenv":"^16.3.1","multer":"^1.4.5-lts.1"}}
+{"name":"lavka26-backend","version":"1.0.0","description":"Lavka26 Backend API","main":"server-new.js","scripts":{"start":"node server-new.js"},"dependencies":{"express":"^4.18.2","sqlite3":"^5.1.6","cors":"^2.8.5","dotenv":"^16.3.1","multer":"^1.4.5-lts.1"}}
